tests/ui/invalid_repr.stderr
error: missing type in `repr` attribute
 --> tests/ui/invalid_repr.rs:3:1
  |
3 | #[repr(align(1))]
  | ^^^^^^^^^^^^^^^^^
4 | #[derive(Clone, Copy, IntEnum)]
  |                       ------- in this derive macro expansion
  |
  = note: valid reprs are `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize`, `usize`
  = note: this error originates in the derive macro `IntEnum` (in Nightly builds, run with -Z macro-backtrace for more info)
